QPID-8172: [Broker-J] OAuth2 authentication provider should not mandate setting of client secret